--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="location_settings">Location</string>
+    <string name="notification_settings">Notifications</string>
+    <string name="logout_settings">Logout</string>
 </resources>
